cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_174.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/rsa/rsa_ssl.c:68: error: DEAD_STORE
  The value written to &mlen (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/rsa/rsa_ssl.c:68:5: Write of unused value
66.       unsigned char *em = NULL;
67.       unsigned int good, found_zero_byte, mask, threes_in_row;
68.       int zero_index = 0, msg_index, mlen = -1, err;
          ^
69.   
70.       if (tlen <= 0 || flen <= 0)
